Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,7 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
+    npm install -g webpack webpack-cli --save-dev
     npm install
-    npm run build
+    npx webpack --config webpack.config.js
   displayName: 'npm install and build'
